--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Alegreya&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Alegreya&display=swap');
 * {
     font-family: 'Alegreya' !important;
-}
+} */
 
 /*!
  * Bootstrap v4.2.1 (https://getbootstrap.com/)
